src/css/styles.css
[data-typeface='system-ui'] {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue',
    sans-serif;
}

/* TODO: consider more advanced Grid layout
 * https://www.joshwcomeau.com/css/full-bleed/
 */
:root {
  --pageContentWidth: 60ch;
  --mainPadding: calc(100% - var(--pageContentWidth));
}

[data-layout='centered-single-column'] {
  padding: 0 calc(var(--mainPadding) / 2);
}

[data-responsive-youtube--container] {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 56.25%;
  margin: 1em 0;
}

[data-responsive-youtube--container] > iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

